add img directory, image, and welcome header with message

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Cameron Ray - Code Portfolio</title>
 </head>
 <body>
-  
+  <h1>Cameron Ray - Front End Web Developement</h1>
+  <P>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</P>
+  <img src="img/headshot.jpg" alt="Picture of Cameron holding Coffee">
 </body>
 </HTML>
