--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <P>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</P>
   <img src="img/headshot.jpg" alt="Picture of Cameron holding Coffee">
   <h2>Some of my Projects</h2>
+  <h4>Click the project name to view its Repo on Github!</h4>
   <ul>
     <li><a href="https://github.com/Sploob/hello-world">Hello World</a> - First step in HTML. Project utilizes strictly HTML with no CSS styling.</li>
     <li><a href="https://github.com/Sploob/my-first-webpage">My first webpage</a> - A project to practice primarily HTML and Markdown. This project utilizes HTML, CSS, Git, and Markdown in a README file.</li>
     <li><a href="https://github.com/Sploob/band-website">Bane Website</a> - A website to showcase Sergei Rachmaninoff and practice floating elements. A step into CSS styling using HTML and CSS.</li>
     <li><a href="https://github.com/Sploob/vacation-destination">Vacation Destination</a> - Another exploration into HTML and styling with Bootstrap. This utilizes HTML CSS and the Bootstrap framework.</li>
     <li><a href="https://github.com/Sploob/branching-test-project">Branching Project</a> - A simple html page to practice using git to branch code and merge code back into a main branch. This project utilizes HTML, CSS, and Git.</li>
-    <li><a href="https://github.com/Sploob/my-fish-webpage">My Pet Website</a> - A website dedicated to all of my fish which showcases my ability to launch a website utilizing Github Pages. This project utilizes HTML, CSS, Git and Github.</li>
-    <li><a href="https://github.com/Sploob/Blackspire-Handbook">Blackspire Handbook</a> - This is a personal project for independent study to explore web developement in my free time Prior to my journey at Epicodus. This project utilizes HTML, CSS, PHP, and JQUERY. It is a live website utilized by my Live Action Role Play group to house NPO documentation and rules of play.</li>
+    <li><a href="https://github.com/Sploob/my-fish-webpage">My Pet Website</a> - A website dedicated to all of my fish which showcases my ability to launch a website utilizing <a href="https://sploob.github.io/my-fish-webpage/">Github Pages</a> and the accumulation of skills through Epicodus. This project utilizes HTML, CSS, Git and Github.</li>
+    <li><a href="https://github.com/Sploob/Blackspire-Handbook">Blackspire Handbook</a> - This is a personal project for independent study to explore web developement in my free time Prior to my journey at Epicodus. This project utilizes HTML, CSS, PHP, and some testing JQUERY. It is a live website utilized by my Live Action Role Play group to house NPO documentation and rules of play. The live version of the site can be found at <a href="http://www.blackspire.site/">Blackspire.site</a> if you are interested.</li>
   </ul>
 </body>
 </HTML>
