add border to headshot image and float

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <HTML lang="us-EN">
 <head>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
-  <title>Cameron Ray - Code Portfolio</title>
+  <title>Code Portfolio - Cameron Ray</title>
 </head>
 <body>
-  <h1>Cameron Ray - Front End Web Developer & Video Marketing Content Creative</h1>
+  <h1 class="headline">Cameron Ray - Front End Web Developer & Video Content Creative</h1>
   <P>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</P>
-  <img src="img/headshot.jpg" alt="Picture of Cameron holding Coffee">
-  
+  <img class="headshot" src="img/headshot.jpg" alt="Picture of Cameron holding Coffee">
+
   <h2>Some of my Projects</h2>
   <h4>Click the project name to view its Repo on Github!</h4>
 
