--- a/index.html
+++ b/index.html
@@ -5,64 +5,80 @@
   <title>Code Portfolio - Cameron Ray</title>
 </head>
 <body>
-  <h1 class="headline">Cameron Ray - Front End Web Developer & Video Content Creative</h1>
-  <P>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</P>
+  <div class="headline">
+    <h1>Cameron Ray - Front End Web Developer & Video Content Creative</h1>
+    <P>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</P>
+  </div>
+
   <img class="headshot" src="img/headshot.jpg" alt="Picture of Cameron holding Coffee">
 
-  <h2>Some of my Projects</h2>
-  <h4>Click the project name to view its Repo on Github!</h4>
+  <div class="projects">
+    <h2>Some of my Projects</h2>
+    <h4>Click the project name to view its Repo on Github!</h4>
 
-  <ol>
-    <li><a href="https://github.com/Sploob/hello-world">Hello World</a> - First step in HTML. Project utilizes strictly HTML with no CSS styling.</li>
-    <li><a href="https://github.com/Sploob/my-first-webpage">My first webpage</a> - A project to practice primarily HTML and Markdown. This project utilizes HTML, CSS, Git, and Markdown in a README file.</li>
-    <li><a href="https://github.com/Sploob/band-website">Bane Website</a> - A website to showcase Sergei Rachmaninoff and practice floating elements. A step into CSS styling using HTML and CSS.</li>
-    <li><a href="https://github.com/Sploob/vacation-destination">Vacation Destination</a> - Another exploration into HTML and styling with Bootstrap. This utilizes HTML CSS and the Bootstrap framework.</li>
-    <li><a href="https://github.com/Sploob/branching-test-project">Branching Project</a> - A simple html page to practice using git to branch code and merge code back into a main branch. This project utilizes HTML, CSS, and Git.</li>
-    <li><a href="https://github.com/Sploob/my-fish-webpage">My Pet Website</a> - A website dedicated to all of my fish which showcases my ability to launch a website utilizing <a href="https://sploob.github.io/my-fish-webpage/">Github Pages</a> and the accumulation of skills through Epicodus. This project utilizes HTML, CSS, Git and Github.</li>
-    <li><a href="https://github.com/Sploob/Blackspire-Handbook">Blackspire Handbook</a> - This is a personal project for independent study to explore web developement in my free time Prior to my journey at Epicodus. This project utilizes HTML, CSS, PHP, and some testing JQUERY. It is a live website utilized by my Live Action Role Play group to house NPO documentation and rules of play. The live version of the site can be found at <a href="http://www.blackspire.site/">Blackspire.site</a> if you are interested.</li>
-  </ol>
+    <ol>
+      <li><a href="https://github.com/Sploob/hello-world">Hello World</a> - First step in HTML. Project utilizes strictly HTML with no CSS styling.</li>
+      <li><a href="https://github.com/Sploob/my-first-webpage">My first webpage</a> - A project to practice primarily HTML and Markdown. This project utilizes HTML, CSS, Git, and Markdown in a README file.</li>
+      <li><a href="https://github.com/Sploob/band-website">Bane Website</a> - A website to showcase Sergei Rachmaninoff and practice floating elements. A step into CSS styling using HTML and CSS.</li>
+      <li><a href="https://github.com/Sploob/vacation-destination">Vacation Destination</a> - Another exploration into HTML and styling with Bootstrap. This utilizes HTML CSS and the Bootstrap framework.</li>
+      <li><a href="https://github.com/Sploob/branching-test-project">Branching Project</a> - A simple html page to practice using git to branch code and merge code back into a main branch. This project utilizes HTML, CSS, and Git.</li>
+      <li><a href="https://github.com/Sploob/my-fish-webpage">My Pet Website</a> - A website dedicated to all of my fish which showcases my ability to launch a website utilizing <a href="https://sploob.github.io/my-fish-webpage/">Github Pages</a> and the accumulation of skills through Epicodus. This project utilizes HTML, CSS, Git and Github.</li>
+      <li><a href="https://github.com/Sploob/Blackspire-Handbook">Blackspire Handbook</a> - This is a personal project for independent study to explore web developement in my free time Prior to my journey at Epicodus. This project utilizes HTML, CSS, PHP, and some testing JQUERY. It is a live website utilized by my Live Action Role Play group to house NPO documentation and rules of play. The live version of the site can be found at <a href="http://www.blackspire.site/">Blackspire.site</a> if you are interested.</li>
+    </ol>
+  </div>
 
   <h2>About Me</h2>
-  <h3>Background</h3>
-  <p>Time to tell you a little bit about myself. I'm a 29 year old freelancer living and working out of an 8x30ft <strong>tiny house</strong> in rural Oregon. I decided to take this programming class at Epicodus to explore the world of coding and software developemnt. I believe full stack developement could be another marketable tool in my arsenal as a freelancer who strives to stay mobile and remote.</p>
-  <p>I've worked as a content creative for online marketers over the past six years doing primarily videography and editing for the following businesses.</p>
-  <ul>
-    <li><a href="https://ftadetailing.com/">FTA Detailing</a> - High end automotive detailing in Oregon</li>
-    <li><a href="https://doggyramps.com/">Doggie Ramps USA</a> - A pet furniture manufacturer</li>
-    <li><a href="https://www.facebook.com/Crash-glass-370332443157383">Crash Glass</a> - Custom glass blowing </li>
-    <li><a href="https://www.instagram.com/nushelltattoos/">Nushell Tattoo</a> - Independent tattoo artist</li>
-    <li>Albany School district PAC - School bond campaign <em>passed!</em></li>
-  </ul>
 
-  <h3>Interests</h3>
-  <ul>
-    <li>Web Development</li>
-    <li>Game Development</li>
-    <li>Back End Development</li>
-  </ul>
+  <div>
+    <h3>Background</h3>
+    <p>Time to tell you a little bit about myself. I'm a 29 year old freelancer living and working out of an 8x30ft <strong>tiny house</strong> in rural Oregon. I decided to take this programming class at Epicodus to explore the world of coding and software developemnt. I believe full stack developement could be another marketable tool in my arsenal as a freelancer who strives to stay mobile and remote.</p>
+    <p>I've worked as a content creative for online marketers over the past six years doing primarily videography and editing for the following businesses.</p>
+    <ul>
+      <li><a href="https://ftadetailing.com/">FTA Detailing</a> - High end automotive detailing in Oregon</li>
+      <li><a href="https://doggyramps.com/">Doggie Ramps USA</a> - A pet furniture manufacturer</li>
+      <li><a href="https://www.facebook.com/Crash-glass-370332443157383">Crash Glass</a> - Custom glass blowing </li>
+      <li><a href="https://www.instagram.com/nushelltattoos/">Nushell Tattoo</a> - Independent tattoo artist</li>
+      <li>Albany School district PAC - School bond campaign <em>passed!</em></li>
+    </ul>
+  </div>
 
-  <h3>Hobbies</h3>
-  <ul>
-    <li>Speedrunning Super Mario 64</li>
-    <li>Storybook Brawl</li>
-    <li>Amtgard - Competitive Live Action Roleplay</li>
-    <li>Competitive Tekken 7</li>
-  </ul>
+  <div>
+    <h3>Interests</h3>
+    <ul>
+      <li>Web Development</li>
+      <li>Game Development</li>
+      <li>Back End Development</li>
+    </ul>
+  </div>
 
-  <h3>Creative Skills</h3>
-  <ul>
-    <li>6 years of experience in Adobe editing suite</li>
-    <li>1 year experience in Davinci Resolve including current version</li>
-    <li>10 years of photography and videography experience</li>
-    <li>3 years Lighting, sound, and grip for live and recorded studio</li>
-    <li>2 years Technical Director and switch board operation</li>
-  </ul>
+  <div>
+    <h3>Hobbies</h3>
+    <ul>
+      <li>Speedrunning Super Mario 64</li>
+      <li>Storybook Brawl</li>
+      <li>Amtgard - Competitive Live Action Roleplay</li>
+      <li>Competitive Tekken 7</li>
+    </ul>
+  </div>
 
-  <h3>Programming Skills</h3>
-  <ul>
-    <li>HTML</li>
-    <li>CSS</li>
-    <li>Git</li>
-  </ul>
+  <div>
+    <h3>Creative Skills</h3>
+    <ul>
+      <li>6 years of experience in Adobe editing suite</li>
+      <li>1 year experience in Davinci Resolve including current version</li>
+      <li>10 years of photography and videography experience</li>
+      <li>3 years Lighting, sound, and grip for live and recorded studio</li>
+      <li>2 years Technical Director and switch board operation</li>
+    </ul>
+  </div>
+
+  <div>
+    <h3>Programming Skills</h3>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Git</li>
+    </ul>
+  </div>
 </body>
 </HTML>
