add sidebard containing social media links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <P>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</P>
   </div>
 
+  <div class="sidebar">
+    <a href="">Facebook</a>
+    <a href="">Instagram</a>
+    <a href="">Github</a>
+    <a href="">Linkdin</a>
+  </div>
+
   <img class="headshot" src="img/headshot.jpg" alt="Picture of Cameron holding Coffee">
 
   <div class="projects">
