--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <h4>Click the project name to view its Repo on Github!</h4>
 
     <ol>
-      <li><a href="https://github.com/Sploob/hello-world">Hello World</a> - First step in HTML. Project utilizes strictly HTML with no CSS styling.</li>
-      <li><a href="https://github.com/Sploob/my-first-webpage">My first webpage</a> - A project to practice primarily HTML and Markdown. This project utilizes HTML, CSS, Git, and Markdown in a README file.</li>
-      <li><a href="https://github.com/Sploob/band-website">Bane Website</a> - A website to showcase Sergei Rachmaninoff and practice floating elements. A step into CSS styling using HTML and CSS.</li>
-      <li><a href="https://github.com/Sploob/vacation-destination">Vacation Destination</a> - Another exploration into HTML and styling with Bootstrap. This utilizes HTML CSS and the Bootstrap framework.</li>
-      <li><a href="https://github.com/Sploob/branching-test-project">Branching Project</a> - A simple html page to practice using git to branch code and merge code back into a main branch. This project utilizes HTML, CSS, and Git.</li>
-      <li><a href="https://github.com/Sploob/my-fish-webpage">My Pet Website</a> - A website dedicated to all of my fish which showcases my ability to launch a website utilizing <a href="https://sploob.github.io/my-fish-webpage/">Github Pages</a> and the accumulation of skills through Epicodus. This project utilizes HTML, CSS, Git and Github.</li>
-      <li><a href="https://github.com/Sploob/Blackspire-Handbook">Blackspire Handbook</a> - This is a personal project for independent study to explore web developement in my free time Prior to my journey at Epicodus. This project utilizes HTML, CSS, PHP, and some testing JQUERY. It is a live website utilized by my Live Action Role Play group to house NPO documentation and rules of play. The live version of the site can be found at <a href="http://www.blackspire.site/">Blackspire.site</a> if you are interested.</li>
+      <li><a href="https://github.com/Sploob/hello-world" target="_blank">Hello World</a> - First step in HTML. Project utilizes strictly HTML with no CSS styling.</li>
+      <li><a href="https://github.com/Sploob/my-first-webpage" target="_blank">My first webpage</a> - A project to practice primarily HTML and Markdown. This project utilizes HTML, CSS, Git, and Markdown in a README file.</li>
+      <li><a href="https://github.com/Sploob/band-website" target="_blank">Bane Website</a> - A website to showcase Sergei Rachmaninoff and practice floating elements. A step into CSS styling using HTML and CSS.</li>
+      <li><a href="https://github.com/Sploob/vacation-destination" target="_blank">Vacation Destination</a> - Another exploration into HTML and styling with Bootstrap. This utilizes HTML CSS and the Bootstrap framework.</li>
+      <li><a href="https://github.com/Sploob/branching-test-project" target="_blank">Branching Project</a> - A simple html page to practice using git to branch code and merge code back into a main branch. This project utilizes HTML, CSS, and Git.</li>
+      <li><a href="https://github.com/Sploob/my-fish-webpage" target="_blank">My Pet Website</a> - A website dedicated to all of my fish which showcases my ability to launch a website utilizing <a href="https://sploob.github.io/my-fish-webpage/" target="_blank">Github Pages</a> and the accumulation of skills through Epicodus. This project utilizes HTML, CSS, Git and Github.</li>
+      <li><a href="https://github.com/Sploob/Blackspire-Handbook" target="_blank">Blackspire Handbook</a> - This is a personal project for independent study to explore web developement in my free time Prior to my journey at Epicodus. This project utilizes HTML, CSS, PHP, and some testing JQUERY. It is a live website utilized by my Live Action Role Play group to house NPO documentation and rules of play. The live version of the site can be found at <a href="http://www.blackspire.site/" target="_blank">Blackspire.site</a> if you are interested.</li>
     </ol>
   </div>
 
@@ -38,13 +38,13 @@
 
   <div>
     <h3>Background</h3>
-    <p>Time to tell you a little bit about myself. I'm a 29 year old freelancer living and working out of an 8x30ft <strong>tiny house</strong> in rural Oregon. I decided to take this programming class at Epicodus to explore the world of coding and software developemnt. I believe full stack developement could be another marketable tool in my arsenal as a freelancer who strives to stay mobile and remote.</p>
+    <p>Time to tell you a little bit about myself. I'm a 29 year old freelancer living and working out of an <strong>8x30ft tiny house</strong> in rural Oregon. I decided to take this programming class at Epicodus to explore the world of coding and software developemnt. I believe full stack developement could be another marketable tool in my arsenal as a freelancer who strives to stay mobile and remote.</p>
     <p>I've worked as a content creative for online marketers over the past six years doing primarily videography and editing for the following businesses.</p>
     <ul>
-      <li><a href="https://ftadetailing.com/">FTA Detailing</a> - High end automotive detailing in Oregon</li>
-      <li><a href="https://doggyramps.com/">Doggie Ramps USA</a> - A pet furniture manufacturer</li>
-      <li><a href="https://www.facebook.com/Crash-glass-370332443157383">Crash Glass</a> - Custom glass blowing </li>
-      <li><a href="https://www.instagram.com/nushelltattoos/">Nushell Tattoo</a> - Independent tattoo artist</li>
+      <li><a href="https://ftadetailing.com/" target="_blank">FTA Detailing</a> - High end automotive detailing in Oregon</li>
+      <li><a href="https://doggyramps.com/" target="_blank">Doggie Ramps USA</a> - A pet furniture manufacturer</li>
+      <li><a href="https://www.facebook.com/Crash-glass-370332443157383" target="_blank">Crash Glass</a> - Custom glass blowing </li>
+      <li><a href="https://www.instagram.com/nushelltattoos/" target="_blank">Nushell Tattoo</a> - Independent tattoo artist</li>
       <li>Albany School district PAC - School bond campaign <em>passed!</em></li>
     </ul>
   </div>
