--- a/index.html
+++ b/index.html
@@ -28,34 +28,34 @@
         <p>First step in HTML. Project utilizes strictly HTML with no CSS styling.</p>
       </a>
 
-      <div class="project-card">
-        <h5><a href="https://github.com/Sploob/my-first-webpage" target="_blank">My first webpage</a></h5>
+      <a class="project-card" href="https://github.com/Sploob/my-first-webpage" target="_blank">
+        <h5>My first webpage</h5>
         <p>A project to practice primarily HTML and Markdown. This project utilizes HTML, CSS, Git, and Markdown in a README file.</p>
-      </div>
+      </a>
 
-      <div class="project-card">
-        <h5><a href="https://github.com/Sploob/band-website" target="_blank">Band Website</a></h5>
+      <a class="project-card" href="https://github.com/Sploob/band-website" target="_blank">
+        <h5>Band Website</h5>
         <p>A website to showcase Sergei Rachmaninoff and practice floating elements. A step into CSS styling using HTML and CSS.</p>
-      </div>
+      </a>
 
-      <div class="project-card">
-        <h5><a href="https://github.com/Sploob/vacation-destination" target="_blank">Vacation Destination</a></h5>
+      <a class="project-card" href="https://github.com/Sploob/vacation-destination" target="_blank">
+        <h5>Vacation Destination</h5>
         <p>Another exploration into HTML and styling with Bootstrap. This utilizes HTML CSS and the Bootstrap framework.</p>
-      </div>
+      </a>
 
-      <div class="project-card">
-        <h5><a href="https://github.com/Sploob/branching-test-project" target="_blank">Branching Project</a></h5>
+      <a class="project-card" href="https://github.com/Sploob/branching-test-project" target="_blank">
+        <h5>Branching Project</h5>
         <p>A simple html page to practice using git to branch code and merge code back into a main branch. This project utilizes HTML, CSS, and Git.</p>
-      </div>
+      </a>
 
-      <div class="project-card">
-        <h5><a href="https://github.com/Sploob/my-fish-webpage" target="_blank">My Pet Website</a></h5>
-        <p>A website dedicated to all of my fish which showcases my ability to launch a website utilizing <a href="https://sploob.github.io/my-fish-webpage/" target="_blank">Github Pages</a> and the accumulation of skills through Epicodus. This project utilizes HTML, CSS, Git and Github.</p>
-      </div>
-      <div class="project-card">
-        <h5><a href="https://github.com/Sploob/Blackspire-Handbook" target="_blank">Blackspire Handbook</a></h5>
-        <p>This is a personal project for independent study to explore web developement in my free time Prior to my journey at Epicodus. This project utilizes HTML, CSS, PHP, and some testing JQUERY. It is a live website utilized by my Live Action Role Play group to house NPO documentation and rules of play. The live version of the site can be found at <a href="http://www.blackspire.site/" target="_blank">Blackspire.site</a> if you are interested.</p>
-      </div>
+      <a class="project-card" href="https://github.com/Sploob/my-fish-webpage" target="_blank">
+        <h5>My Pet Website</h5>
+        <p>A website dedicated to all of my fish which showcases my ability to launch a website utilizing Github Pages and the accumulation of skills through Epicodus. This project utilizes HTML, CSS, Git and Github.</p>
+      </a>
+      <a class="project-card" href="https://github.com/Sploob/Blackspire-Handbook" target="_blank">
+        <h5>Blackspire Handbook</h5>
+        <p>This is a personal project for independent study to explore web developement in my free time Prior to my journey at Epicodus. This project utilizes HTML, CSS, PHP, and some testing JQUERY. It is a live website utilized by my Live Action Role Play group to house NPO documentation and rules of play. The live version of the site can be found at Blackspire.site if you are interested.</p>
+      </a>
     </div>
 
   </div>
