add social icons to sidebar and change color scheme to black & white

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <h1>Cameron Ray - Front End Web Developer & Video Content Creative</h1>
     <P>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</P>
   </div>
-  
+
   <img class="headshot" src="img/headshot.jpg" alt="Picture of Cameron holding Coffee">
 
   <div class="sidebar">
-    <a href="https://www.facebook.com/cameron.ray.790" target="_blank">Facebook</a>
-    <a href="https://www.instagram.com/cameronlray/" target="_blank">Instagram</a>
-    <a href="https://github.com/Sploob" target="_blank">Github</a>
+    <a href="https://www.facebook.com/cameron.ray.790" target="_blank">
+      <img src="img/facebook.png" alt="facebook icon">
+    </a>
+    <a href="https://www.instagram.com/cameronlray/" target="_blank">
+      <img src="img/instagram.png" alt="instagram icon">
+    </a>
+    <a href="https://github.com/Sploob" target="_blank">
+      <img src="img/github-logo.png" alt="github icon"
+    </a>
   </div>
 
   <div class="projects">
