--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="img/instagram.png" alt="instagram icon">
     </a>
     <a href="https://github.com/Sploob" target="_blank">
-      <img src="img/github-logo.png" alt="github icon"
+      <img src="img/github-logo.png" alt="github icon">
     </a>
   </div>
 
