--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <HTML lang="us-EN">
 <head>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Code Portfolio - Cameron Ray</title>
 </head>
@@ -99,7 +100,6 @@
   </div>
 
   <div>
-    <h3>Creative Skills</h3>
     <ul>
       <li>6 years of experience in Adobe editing suite</li>
       <li>1 year experience in Davinci Resolve including current version</li>
@@ -117,5 +117,7 @@
       <li>Git</li>
     </ul>
   </div>
+
+
 </body>
 </HTML>
