remove bullet points from background list.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <h2 class="display-2">About Me</h2>
       <h3 class="display-4">Background</h3>
       <p class="lead">Time to tell you a little bit about myself. I'm a 29 year old freelancer living and working out of an <strong>8x30ft tiny house</strong> in rural Oregon. I decided to take this programming class at Epicodus to explore the world of coding and software developemnt. I believe full stack developement could be another marketable tool in my arsenal as a freelancer who strives to stay mobile and remote.</p>
-      <p class="lead">I've worked as a content creative for online marketers over the past six years doing primarily videography and editing for the following businesses.</p>
-      <ul>
+      <p class="lead">I've worked as a content creative for online marketers over the past six years doing primarily videography and editing for the following businesses:</p>
+      <ul class="no-bullet">
         <li><a href="https://ftadetailing.com/" target="_blank" type="button" class="btn btn-outline-dark">FTA Detailing</a> - High end automotive detailing in Oregon</li>
         <li><a href="https://doggyramps.com/" target="_blank" type="button" class="btn btn-outline-dark">Doggie Ramps USA</a> - A pet furniture manufacturer</li>
         <li><a href="https://www.facebook.com/Crash-glass-370332443157383" target="_blank" type="button" class="btn btn-outline-dark">Crash Glass</a> - Custom glass blowing </li>
