BUGFIX: correct improperly capitalized paragraph tag, correct link to GH-pages in README.md

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="headline">
     <h1>Cameron Ray - Front End Web Developer & Video Content Creative</h1>
-    <P>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</P>
+    <p>Hello, I'm Cameron. My coding journey began at the beginning of 2022, and has quickly become a passion for me. This portfolio quickly showcases some of the projects I've completed to date.</p>
   </div>
   <img class="headshot" src="img/headshot.jpg" alt="Picture of Cameron holding Coffee">
   <div class="sidebar">
